@@ -1,3 +1,7 @@
+2003-07-22  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/SelectChild.py: Replace braces with parentheses in named format
+	string parameter. 
+
 2003-07-22  Tim Waugh  <twaugh@redhat.com>
 	* src/plugins/Ancestors.py: Mark translation strings.
 	* src/RelLib.py: Made Person.probablyAlive() take partners into
